[gd_scene load_steps=11 format=3 uid="uid://bhvhlegxjcple"]

[ext_resource type="Script" path="res://src/resources/objects/Laser.gd" id="1_7vpdq"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_dhq2b"]
height = 9.0
radius = 0.05

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ge13c"]
resource_local_to_scene = true
shading_mode = 0
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_8pb06"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_ge13c")
top_radius = 0.05
bottom_radius = 0.05
height = 1.0
radial_segments = 8
rings = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p7ajr"]
resource_local_to_scene = true
shading_mode = 0
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_wmgy7"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_p7ajr")
top_radius = 0.05
bottom_radius = 0.05
height = 0.5
radial_segments = 8
rings = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3knjl"]
resource_local_to_scene = true
shading_mode = 0
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_k0ue5"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_3knjl")
top_radius = 0.05
bottom_radius = 0.05
height = 0.25
radial_segments = 8
rings = 2

[sub_resource type="Animation" id="Animation_kfcgw"]
resource_name = "oscillate"
length = 4.0
loop_mode = 1
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("laser")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 1, 4, 0, 0, 2, 1, 0, 0, 0, 3, 1, -4, 0, 0)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("laser2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, -1, 0, 0, 1.1, 1, 4.25, 0, 0, 2.1, 1, -1, 0, 0, 3.1, 1, -4.25, 0, 0)
tracks/2/type = "position_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("laser3")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, -1.75, 0, 0, 0.5, 1, -4.35, 0, 0, 1.5, 1, 0, 0, 0, 2.5, 1, 4.35, 0, 0, 3.5, 1, 0, 0, 0, 4, 1, -1.75, 0, 0)
tracks/3/type = "position_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("laser4")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0.2, 1, -4, 0, 0, 0.8, 1, 0.375, 0, 0, 1.2, 1, 4, 0, 0, 1.7, 1, -0.375, 0, 0, 2.1, 1, -4, 0, 0, 2.6, 1, 0, 0, 0, 3.1, 1, 4, 0, 0, 3.6, 1, -0.375, 0, 0, 4, 1, -3.5, 0, 0)
tracks/4/type = "position_3d"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("laser5")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = PackedFloat32Array(0, 1, -3.75, 0, 0, 1, 1, 0, 0, 0, 2, 1, 4.25, 0, 0, 3, 1, 0, 0, 0)
tracks/5/type = "position_3d"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("laser7")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0, 1, 4, 0, 0, 1, 1, 0, 0, 0, 2, 1, -4, 0, 0, 3, 1, 0, 0, 0)
tracks/6/type = "position_3d"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("laser8")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = PackedFloat32Array(0, 1, 1.75, 0, 0, 0.5, 1, 0, 0, 0, 1.6, 1, -4.25, 0, 0, 2.6, 1, 0, 0, 0, 3.6, 1, 4.25, 0, 0)
tracks/7/type = "position_3d"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("laser9")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = PackedFloat32Array(1, 1, 4.35, 0, 0, 2, 1, 0, 0, 0, 3, 1, -4.35, 0, 0)
tracks/8/type = "position_3d"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("laser11")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = PackedFloat32Array(0.3, 1, 2.455, 0, 0, 1.1, 1, 0, 0, 0, 1.9, 1, -4.25, 0, 0, 2.8, 1, 0, 0, 0, 3.7, 1, 4.25, 0, 0)
tracks/9/type = "position_3d"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("laser12")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = PackedFloat32Array(2, 1, 4.35, 0, 0, 3.6, 1, -4.35, 0, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d1yw3"]
_data = {
"oscillate": SubResource("Animation_kfcgw")
}

[node name="Laser" type="Area3D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_7vpdq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CylinderShape3D_dhq2b")

[node name="laser" type="MeshInstance3D" parent="." groups=["laser_particle"]]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 4, 0, 0)
mesh = SubResource("CylinderMesh_8pb06")

[node name="laser2" type="MeshInstance3D" parent="." groups=["laser_particle"]]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 3.77273, 0, 0)
mesh = SubResource("CylinderMesh_wmgy7")

[node name="laser3" type="MeshInstance3D" parent="." groups=["laser_particle"]]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -2.175, 0, 0)
mesh = SubResource("CylinderMesh_k0ue5")

[node name="laser4" type="MeshInstance3D" parent="." groups=["laser_particle"]]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 2.1875, 0, 0)
mesh = SubResource("CylinderMesh_8pb06")

[node name="laser5" type="MeshInstance3D" parent="." groups=["laser_particle"]]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_wmgy7")

[node name="laser7" type="MeshInstance3D" parent="." groups=["laser_particle"]]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_8pb06")

[node name="laser8" type="MeshInstance3D" parent="." groups=["laser_particle"]]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -1.93182, 0, 0)
mesh = SubResource("CylinderMesh_wmgy7")

[node name="laser9" type="MeshInstance3D" parent="." groups=["laser_particle"]]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 4.35, 0, 0)
mesh = SubResource("CylinderMesh_k0ue5")

[node name="laser11" type="MeshInstance3D" parent="." groups=["laser_particle"]]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.306875, 0, 0)
mesh = SubResource("CylinderMesh_wmgy7")

[node name="laser12" type="MeshInstance3D" parent="." groups=["laser_particle"]]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.725, 0, 0)
mesh = SubResource("CylinderMesh_k0ue5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d1yw3")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
